data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4138.wast
;; 7. **Test 7**:    - Indirectly call a function that includes a decrementing loop where incorrect usage of `br_if` causes the loop to decrement incorrectly, hindering loop termination.    - **Constraint Checked**: Checks operand handling and ensures correct execution and termination of decrementing loops through indirect calls.

(assert_invalid
  (module
    (type (func (param i32)))
    (type (func (param i32 i32)))
    (table 1 funcref)
    (elem (i32.const 0) 1)
    (func $loop_func (param i32) (local i32)
      local.get 0
      i32.const 1
      i32.sub
      local.tee 1
      br_if 0
    )
    (func $indirect_call (param i32)
      local.get 0
      call_indirect (type 0) (i32.const 0)
    )
  )
  "type mismatch"
)